# Realtime-Vulkan-Hair

./: CMakeLists.txt  README.md
src/: BufferUtils.cpp  BufferUtils.h  CMakeLists.txt  Camera.cpp  Camera.h  Device.cpp  Device.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h  QueueFlags.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderModule.cpp  ShaderModule.h  Strand.cpp  Strand.h  SwapChain.cpp  SwapChain.h  Vertex.h  Window.cpp  Window.h  main.cpp
src/models/: mannequin_segment2.mtl
src/shaders/: collisionCompute.comp  compute.comp  graphics.frag  graphics.vert  hair.frag  hair.geom  hair.tesc  hair.tese  hair.vert  hairOpacity.frag
